# FYP

./: PWM.ipynb  README.md
Background/Image_construction/: RFArrays.rar  Ultrasound Image Contruction and Envelope.ipynb
Background/Image_construction/RFArrays/: B_80,0_-0,5.npy  B_80,0_-1,0.npy  B_80,0_-1,5.npy  B_80,0_-10,0.npy  B_80,0_-10,5.npy  B_80,0_-11,0.npy  B_80,0_-11,5.npy  B_80,0_-12,0.npy  B_80,0_-12,5.npy  B_80,0_-13,0.npy  B_80,0_-13,5.npy  B_80,0_-14,0.npy  B_80,0_-14,5.npy  B_80,0_-15,0.npy  B_80,0_-15,5.npy  B_80,0_-16,0.npy  B_80,0_-16,5.npy  B_80,0_-17,0.npy  B_80,0_-17,5.npy  B_80,0_-18,0.npy  B_80,0_-18,5.npy  B_80,0_-19,0.npy  B_80,0_-19,5.npy  B_80,0_-2,0.npy  B_80,0_-2,5.npy  B_80,0_-20,0.npy  B_80,0_-3,0.npy  B_80,0_-3,5.npy  B_80,0_-4,0.npy  B_80,0_-4,5.npy  B_80,0_-5,0.npy  B_80,0_-5,5.npy  B_80,0_-6,0.npy  B_80,0_-6,5.npy  B_80,0_-7,0.npy  B_80,0_-7,5.npy  B_80,0_-8,0.npy  B_80,0_-8,5.npy  B_80,0_-9,0.npy  (+42 more)
Design/CAD/: MICROCHIP_MD0100N8-G.kicad_mod
Firmware/: README.md
Firmware/pico/gain_ramp/: CMakeLists.txt  MCP4921.c  pio_spi_16_bit.c  pio_spi_16_bit.h
Image_construction/: Beamforming.ipynb  openfiles.py
Pulser/: PWM.ipynb
Results/ADC/: 2M_0_02V_20M.csv  3M_0_02V_20M.csv  40khz0_02V_31M.csv  50khz0_01V_31M.csv  5M_0_02V_25M.csv  5M_0_02V_31M_42M.csv  5M_0_02V_41M.csv  5Mhz_0_02V_20M.csv  ADCrampSPI.csv  finalADC.csv  plotter.m
Results/DAC_VGA/: 200kHz_0_02V_1M_SPI_PIO_RAMP.csv  500kHz_0_02V_1M_SPI_PIO_RAMP.csv  I2CRAMP.csv  I2CRAMP2.csv  I2CRAMP3.csv  I2CRAMP4.csv  I2CRAMP5_BAUD_100k.csv  SPI_DAC_RAMP_NO_PIO.csv  plotter.m
(+95 files in other folders)
